Adding homepage key/value to package.json to deplay the webapp on Github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "skilled-elearning-landing-page",
+  "homepage": "https://0x41-li.github.io/skilled-elearning-landing-page/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
